# web-capture-tools

./: .dockerignore  .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml  pyproject.toml
config/: capture-requirements.txt
docs/: GROK_GUIDE.md  INSTAGRAM_DEVELOPMENT_PLAN.md  INSTRUCTIONS.md  PEEKS_GUIDE.md  README.md  README_PEEKS_ARCHITECTURE.md  TESTING.md  WEB_CAPTURE_FRAMEWORK.md
lib/capture/: __init__.py  cli.py
lib/capture/browser/: __init__.py  manager.py  page_handler.py
lib/capture/core/: __init__.py  engine.py
lib/capture/network/: __init__.py  analyzer.py  interceptor.py
lib/capture/storage/: __init__.py  models.py
lib/cookies/: __init__.py  browser_launcher.py  cdp_client.py  cli.py  profile_manager.py
scripts/: capture-cookies.py  launch-login.ps1  web-capture-cli.py  web-capture-simple.py
