[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "web-capture-tools"
version = "1.0.0"
description = "Web research and browser automation tools with CDP-based cookie capture"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "playwright>=1.49.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
full = [
    "requests>=2.31.0",
    "curl-cffi>=0.14.0",
    "httpx>=0.27.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
capture-cookies = "cookies.cli:main"

[tool.setuptools.packages.find]
where = ["lib"]
